feat/metrics-rework (#9)
* metrics rework

* lint fix
